# cs2-Game-project

./: .gitignore  LICENSE  README.md  myprog
TheQuestofNoReturn/: AIGenerator.h  Artefact.cpp  Artefact.h  CMakeLists.txt  CMakeLists.txt.autosave  DoorItem.cpp  DoorItem.h  GameHUD.h  GameObject.cpp  GameObject.h  Guardiansprite.cpp  Guardiansprite.h  PlayerSprite.cpp  PlayerSprite.h  RiddleAltar.cpp  Room.cpp  Room.h  RoomManager.cpp  RoomManager.h  SharedEnums.h  TrapItem.cpp  TrapItem.h  artefactitem.cpp  artefactitem.h  avatargenerator.cpp  avatargenerator.h  bossbattle.cpp  bossbattle.h  config.h  difficultydialog.cpp  difficultydialog.h  difficultydialog.ui  encountermanager.cpp  encountermanager.h  enemy.cpp  enemy.h  game.cpp  game.h  gamedata.cpp  gamedata.h  (+34 more)
TheQuestofNoReturn/.qtcreator/: CMakeLists.txt.user.21e8827
TheQuestofNoReturn/dialogs/: DilemmaDialog.cpp  DilemmaDialog.h  RevelationDialog.cpp  RevelationDialog.h  RiddleDialog.cpp  RiddleDialog.h
TheQuestofNoReturn/outcomes/: GoodOutcome.cpp  GoodOutcome.h  HintOutcome.cpp  HintOutcome.h  LoseLifeOutcome.cpp  LoseLifeOutcome.h  Outcome.h
TheQuestofNoReturn/riddles/: IdentityRiddle.cpp  IdentityRiddle.h  LogicRiddle.cpp  LogicRiddle.h  Riddle.cpp  Riddle.h  RiddleFallbackPool.cpp  RiddleFallbackPool.h  SequenceRiddle.cpp  SequenceRiddle.h
TheQuestofNoReturn/world/: RiddleAltar.cpp  RiddleAltar.h  RiddleManager.cpp  RiddleManager.h
